--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-timeseries": "^1.0.1",
+    "plotly.js": "^1.48.3",
+    "pondjs": "^0.8.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-plotly.js": "^2.3.0",
+    "react-scripts": "3.0.1",
+    "react-timeseries-charts": "^0.16.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "outlaid": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
